--- a/bookstore-vue-demo/package.json
+++ b/bookstore-vue-demo/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "jest": "^28.1.1",
     "jest-editor-support": "^30.1.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
